<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Settings Values -->
    <string name="settings">Settings</string>


    <!-- Order By settings -->
    <string name="pref_order_by_label">Order By</string>
    <string name="pref_order_by_key" translatable="false">order_by_key</string>

    <!-- QUESTION:
         I'm not sure if this is the best place to put these definitions (popularity.desc and vote_average.desc),
         you can see them below.
         Is there a better place to insert them?
     -->
    <string name="pref_order_by_most_popular" translatable="false">popular</string>
    <string name="pref_order_by_highest_rated" translatable="false">top_rated</string>

    <!-- Entries: to Human read -->
    <string-array name="pref_order_by_entries">
        <item>Most Popular</item>
        <item>Highest Rated</item>
    </string-array>
    <!-- Values: correspondent entry values used in the application side -->
    <string-array name="pref_order_by_values">
        <item>@string/pref_order_by_most_popular</item>
        <item>@string/pref_order_by_highest_rated</item>
    </string-array>


    <string name="movie_bundle" translatable="false">MOVIE_BUNDLE</string>
    <string name="movie_id" translatable="false">MOVIE_ID</string>
    <string name="movie_original_title" translatable="false">MOVIE_ORIGINAL_TITLE</string>
    <string name="movie_synopsis" translatable="false">MOVIE_SYNOPSIS</string>
    <string name="movie_poster" translatable="false">MOVIE_POSTER</string>
    <string name="movie_vote_average" translatable="false">VOTE_AVERAGE</string>
    <string name="movie_release_date" translatable="false">RELEASE_DATE</string>
    <string name="desc_movie_poster">Movie poster</string>
    <string name="section_title_synopsis">Synopsis</string>
    <string name="section_title_trailer">Trailers</string>
    <string name="section_title_review">Reviews</string>
    <string name="section_title_release_date">Release Date</string>
    <string name="author">Author</string>
    <string name="section_title_user_rating">User Rating</string>
    <string name="inserting_movie_in_the_fav_list">Adding movie to the favorite movies list</string>
    <string name="removing_movie_from_the_fav_list">Removing movie from the favorite movies list</string>

    <string name="is_favorited_movie">IS_FAVORITED_MOVIE</string>
    <string name="tmdb_movie_id">THE_MOVIE_DB_ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_detail_movie">Select a movie to see its detail information here</string>

</resources>
